try fix viewer to not shift on scrollbar (blogspot)

--- a/blogspot/blogspot.css
+++ b/blogspot/blogspot.css
@@ -23,6 +23,14 @@ body {
 	background-color: var(--background);
 }
 
+body::-webkit-scrollbar {
+	width: 0 !important;
+} // Safari and Chrome
+
+body {
+	scrollbar-width: 0 !important;
+} //Firefox
+
 a:hover {
   color: var(--foreground);
 }
